tests/ui/rfcs/rfc-2632-const-trait-impl/super-traits-fail-2.nn.stderr
error: `~const` is not allowed here
  --> $DIR/super-traits-fail-2.rs:11:12
   |
LL | trait Bar: ~const Foo {}
   |            ^^^^^^^^^^
   |
note: this trait is not a `#[const_trait]`, so it cannot have `~const` trait bounds
  --> $DIR/super-traits-fail-2.rs:11:1
   |
LL | trait Bar: ~const Foo {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^

error: ~const can only be applied to `#[const_trait]` traits
  --> $DIR/super-traits-fail-2.rs:11:19
   |
LL | trait Bar: ~const Foo {}
   |                   ^^^

error: ~const can only be applied to `#[const_trait]` traits
  --> $DIR/super-traits-fail-2.rs:11:19
   |
LL | trait Bar: ~const Foo {}
   |                   ^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 3 previous errors

